--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 #body{
    overflow-x: hidden;
      
@@ -39,10 +43,12 @@
 #E31>input{
     position: absolute;
     left: 20px;
+    border: 1px solid black;
     top: 50px;
     padding: 10px;
+    border-radius: 7px;
     width: 350px;
-    color:  rgb(58, 51, 51);
+    background-color: rgb(19, 16, 66);
 }
 #E32>label{
     position: absolute;
@@ -55,8 +61,10 @@
     left: 20px;
     top: 140px;
     padding: 10px;
+    border-radius: 7px;
     width: 350px;
-    color: gray;
+    border: 1px solid black;
+    background-color: rgb(19, 16, 66);
 }
 #E33{
     position: absolute;
@@ -74,6 +82,19 @@
     color: black;
     border-radius: 10px;
     border: none;
+}
+#E4>h5{
+    position: absolute;
+    left: 600px;
+    top: 550px;
+    color: blue;
+    font-size: 20px;
+}
+#E4>marquee{
+    position: absolute;
+    left: 10px;
+    color: white;
+    top: 600px;
 }
 
 @media all and (max-width:500px) {
@@ -128,6 +149,32 @@
         width: 300px;
         color: gray;
     }
+    #E34>button{
+        position: absolute;
+        left: 20px;
+        top: 220px;
+        width: 330px;
+        padding: 10px;
+        background-color: antiquewhite;
+        color: black;
+        border-radius: 10px;
+        border: none;
+    }
+    #E4>h5{
+        position: absolute;
+        left: 100px;
+        top: 570px;
+        color: blue;
+        font-size: 25px;
+    }
+    #E4>marquee{
+            position: absolute;
+            left: 10px;
+            color: white;
+            top: 620px;
+        }
+
+
 
     
 }
